<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="dados_do_cliente">Dados do Cliente</string>
    <string name="label_escolha_pizzas">Escolha a(s) pizza(s)</string>
    <string name="hint_nome_cliente">Informe o nome do cliente</string>
    <string name="label_atum">Atum</string>
    <string name="label_bacon">Bacon</string>
    <string name="label_calabresa">Calabresa</string>
    <string name="label_muzzarela">Mussarela</string>
    <string name="label_pequena">Pequena</string>
    <string name="label_media">Media</string>
    <string name="label_grande">Grande</string>
    <string name="label_tamanho_da_pizza">Tamanho da pizza</string>

    <string name="credito">Cartão de crédito</string>
    <string name="debito">Cartão de débito</string>
    <string name="vr">Vale refeição</string>
    <string name="fiado">Fiado</string>
    <string name="cupom">Cupom</string>
    <string name="label_forma_de_pagamento">Forma de pagamento</string>
    <string name="label_calcular">Calcular</string>

    <string name="saudacao">Olá %1$s vamos ligar para o numero %2$s</string>
</resources>
